--- a/src/components/Calculator/Calculator.module.css
+++ b/src/components/Calculator/Calculator.module.css
@@ -1,10 +1,20 @@
 .container {
-  width: 400px;
+  width: 200px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 10rem;
   padding: 15px;
   text-align: center;
   background-color: darkgray;
   border: 1px solid dimgray;
   border-radius: 3px;
+}
+
+.output {
+  margin-bottom: 1rem;
+}
+
+.input {
+  width: 80%;
+  text-align: right;
 }
